First edit for margin

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="info-profil">
       <p class="text-first">Victor Crest   <span class="text-gray">26</span></p>
-      <p class="city text-gray">London</p>
+      <span class="city text-gray">London</span>
     </div>
     <div class="stats">
       <div>
